# xonix

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: enemy.rs  game.rs  land_enemy.rs  levels.rs  main.rs  player.rs  resources.rs  sea_enemy.rs
